tests/errors/syn7.kt
fun assignmentInIf() {
    val x = 5
    if (x = 10) {
        println("Assignment in if")
    }
}